# heartlink

./: .env.example  .gitignore  README.md
backend/: __init__.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/cli/: __init__.py  heartlink_cli.py
backend/app/core/: __init__.py  config.py  env_check.py
data/: .gitkeep
docs/: ARCHITECTURE.md  PROGRESS_LOG.md
frontend/: README.md
scripts/: run_backend.sh  run_frontend.sh
